--- a/_posts/2020-10-12-剑指 Offer 09. 用两个栈实现队列.md
+++ b/_posts/2020-10-12-剑指 Offer 09. 用两个栈实现队列.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-12 11:21:00 +0800
-tags: 剑指Offer
+tags: 剑指Offer 栈与队列
 ---
 
 # 剑指 Offer 09. 用两个栈实现队列
@@ -67,4 +67,47 @@ class CQueue {
  * obj.appendTail(value);
  * int param_2 = obj.deleteHead();
  */
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <stack>
+
+class CQueue
+{
+    std::stack<int> in;
+    std::stack<int> out;
+
+public:
+    CQueue()
+    {
+    }
+
+    void appendTail(int value)
+    {
+        in.push(value);
+    }
+
+    int deleteHead()
+    {
+        int result = -1;
+        if (!out.empty())
+        {
+            result = out.top();
+            out.pop();
+        }
+        else if (!in.empty())
+        {
+            while (!in.empty())
+            {
+                out.push(in.top());
+                in.pop();
+            }
+            result = out.top();
+            out.pop();
+        }
+        return result;
+    }
+};
 ```
