--- a/_posts/2020-10-23-剑指 Offer 30. 包含min函数的栈.md
+++ b/_posts/2020-10-23-剑指 Offer 30. 包含min函数的栈.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-23 15:59:23 +0800
-tags: 剑指Offer
+tags: 剑指Offer 栈与队列
 ---
 
 # 剑指 Offer 30. 包含min函数的栈
@@ -74,4 +74,57 @@ class MinStack {
  * int param_3 = obj.top();
  * int param_4 = obj.min();
  */
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <stack>
+
+class MinStack
+{
+public:
+    /** initialize your data structure here. */
+    std::stack<int> data;
+    std::stack<int> min_val;
+    MinStack()
+    {
+    }
+
+    void push(int x)
+    {
+        data.push(x);
+        if (min_val.empty())
+        {
+            min_val.push(x);
+        }
+        else
+        {
+            min_val.push(std::min(min_val.top(), x));
+        }
+    }
+
+    void pop()
+    {
+
+        if (data.empty() || min_val.empty())
+            return;
+        data.pop();
+        min_val.pop();
+    }
+
+    int top()
+    {
+        if (data.empty())
+            return -1;
+        return data.top();
+    }
+
+    int min()
+    {
+        if (min_val.empty())
+            return -1;
+        return min_val.top();
+    }
+};
 ```
