--- a/_posts/2020-10-11-剑指 Offer 06. 从尾到头打印链表.md
+++ b/_posts/2020-10-11-剑指 Offer 06. 从尾到头打印链表.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-11 16:55:29 +0800
-tags: 剑指Offer
+tags: 剑指Offer 链表
 ---
 
 # 剑指 Offer 06. 从尾到头打印链表
@@ -77,4 +77,27 @@ class Solution {
         queue.add(head.val);
     }
 }
+```
+
+# Solution 3
+cpp  
+``` cpp
+class Solution
+{
+    vector<int> result;
+
+public:
+    vector<int> reversePrint(ListNode *head)
+    {
+        doReversePrint(result, head);
+        return result;
+    }
+    void doReversePrint(vector<int> &result, ListNode *head)
+    {
+        if (head == NULL)
+            return;
+        doReversePrint(result, head->next);
+        result.push_back(head->val);
+    }
+};
 ```
