--- a/_posts/2020-10-27-剑指 Offer 35. 复杂链表的复制.md
+++ b/_posts/2020-10-27-剑指 Offer 35. 复杂链表的复制.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-27 16:21:55 +0800
-tags: 剑指Offer
+tags: 剑指Offer 链表
 ---
 
 # 剑指 Offer 35. 复杂链表的复制
@@ -102,4 +102,53 @@ class Solution {
         return _head_;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    Node *copyRandomList(Node *head)
+    {
+        if (head == NULL)
+            return NULL;
+        Node *temp = head, *new_temp = NULL, *new_head = NULL;
+        while (temp != NULL)
+        {
+            new_temp = new Node(temp->val);
+            new_temp->next = temp->next;
+            new_temp->random = temp->random;
+            temp->next = new_temp;
+            temp = new_temp->next;
+        }
+        // traverse and change random
+        temp = head;
+        while (temp != NULL)
+        {
+            temp = temp->next;
+            if (temp->random != NULL)
+            {
+                temp->random = temp->random->next;
+            }
+            temp = temp->next;
+        }
+        // split origen and new
+        new_head = head->next;
+        temp = head;
+        new_temp = temp->next;
+        while (temp != NULL)
+        {
+            temp->next = temp->next->next;
+            temp = temp->next;
+            if (new_temp->next != NULL)
+            {
+                new_temp->next = new_temp->next->next;
+                new_temp = new_temp->next;
+            }
+        }
+        return new_head;
+    }
+};
 ```
