--- a/_posts/2020-10-20-剑指 Offer 24. 反转链表.md
+++ b/_posts/2020-10-20-剑指 Offer 24. 反转链表.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-20 10:31:06 +0800
-tags: 剑指Offer
+tags: 剑指Offer 链表
 ---
 
 # 剑指 Offer 24. 反转链表
@@ -50,4 +50,25 @@ class Solution {
         return current;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    ListNode *reverseList(ListNode *head)
+    {
+        ListNode *before = head, *current = NULL, *after = NULL;
+        while (before != NULL)
+        {
+            after = current;
+            current = before;
+            before = before->next;
+            current->next = after;
+        }
+        return before;
+    }
+};
 ```
