--- a/_posts/2020-10-11-剑指 Offer 05. 替换空格.md
+++ b/_posts/2020-10-11-剑指 Offer 05. 替换空格.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-11 14:42:00 +0800
-tags: 剑指Offer
+tags: 剑指Offer 字符串
 ---
 
 # 剑指 Offer 05. 替换空格
@@ -35,4 +35,37 @@ class Solution {
         return sb.toString();
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <string>
+
+class Solution
+{
+protected:
+    string result;
+
+public:
+    string replaceSpace(string s)
+    {
+        result.clear();
+        for (size_t i = 0; i < s.length(); i++)
+        {
+            if (s[i] == ' ')
+            {
+                result.push_back('%');
+                result.push_back('2');
+                result.push_back('0');
+            }
+            else
+            {
+                result.push_back(s[i]);
+            }
+        }
+
+        return result;
+    }
+};
 ```
