--- a/_posts/2020-11-04-剑指 Offer 58 - II. 左旋转字符串.md
+++ b/_posts/2020-11-04-剑指 Offer 58 - II. 左旋转字符串.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-04 15:35:45 +0800
-tags: 剑指Offer
+tags: 剑指Offer 字符串
 ---
 
 # 剑指 Offer 58 - II. 左旋转字符串
@@ -39,4 +39,27 @@ class Solution {
         return buffer.toString();
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <string>
+
+class Solution
+{
+public:
+    string reverseLeftWords(string s, int n)
+    {
+        if (s.length() <= 1)
+            return s;
+        n = n % s.length();
+        for (size_t i = 0; i < n; i++)
+        {
+            s.push_back(s[i]);
+        }
+        s = s.substr(n, s.length());
+        return s;
+    }
+};
 ```
