--- a/_posts/2020-10-10-剑指 Offer 03. 数组中重复的数字.md
+++ b/_posts/2020-10-10-剑指 Offer 03. 数组中重复的数字.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-10 11:23:55 +0800
-tags: 剑指Offer
+tags: 剑指Offer 查找算法
 ---
 
 # 剑指 Offer 03. 数组中重复的数字
@@ -97,4 +97,28 @@ class Solution {
         System.out.println(x);
     }
 }
+```
+
+# Solution 3
+cpp  
+``` cpp
+class Solution
+{
+public:
+    int findRepeatNumber(vector<int> &nums)
+    {
+        bool exist[nums.size()];
+        for (size_t i = 0; i < nums.size(); i++)
+            exist[i] = 0;
+        for (size_t i = 0; i < nums.size(); i++)
+        {
+            int pos = nums[i];
+            if (exist[pos] == true)
+                return pos;
+            else
+                exist[pos] = true;
+        }
+        return -1;
+    }
+};
 ```
