--- a/_posts/2020-11-03-剑指 Offer 53 - II. 0～n-1中缺失的数字.md
+++ b/_posts/2020-11-03-剑指 Offer 53 - II. 0～n-1中缺失的数字.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-03 10:34:08 +0800
-tags: 剑指Offer
+tags: 剑指Offer 查找算法
 ---
 
 # 剑指 Offer 53 - II. 0～n-1中缺失的数字
@@ -50,4 +50,37 @@ class Solution {
         return -1;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <vector>
+using std::vector;
+
+class Solution
+{
+public:
+    int missingNumber(vector<int> &nums)
+    {
+        int left = 0;
+        int right = nums.size() - 1;
+        int mid;
+        while (left <= right)
+        {
+            mid = (left + right) / 2;
+            if (nums[mid] == mid)
+                left = mid + 1;
+            else // if (nums[mid] == mid + 1)
+            {
+                if (mid == 0)
+                    return 0;
+                if (nums[mid - 1] == mid - 1)
+                    return mid;
+                right = mid - 1;
+            }
+        }
+        return left;
+    }
+};
 ```
