--- a/_posts/2020-11-03-剑指 Offer 53 - I. 在排序数组中查找数字 I.md
+++ b/_posts/2020-11-03-剑指 Offer 53 - I. 在排序数组中查找数字 I.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-03 10:01:51 +0800
-tags: 剑指Offer
+tags: 剑指Offer 查找算法
 ---
 
 # 剑指 Offer 53 - I. 在排序数组中查找数字 I
@@ -67,4 +67,67 @@ class Solution {
         return -1;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <vector>
+using std::vector;
+
+class Solution
+{
+public:
+    int search(vector<int> &nums, int target)
+    {
+        int left_pos = binary_search_left(nums, target, 0, nums.size() - 1);
+        if (left_pos == -1)
+            return 0;
+        int right_pos = binary_search_right(nums, target, 0, nums.size() - 1);
+        return right_pos - left_pos + 1;
+    }
+
+protected:
+    int binary_search_left(vector<int> &nums, int target, int start, int end)
+    {
+        int mid;
+        while (start <= end)
+        {
+            mid = (start + end) / 2;
+            if (nums[mid] == target)
+            {
+                if (mid == 0 || nums[mid - 1] != target)
+                    return mid;
+                else
+                    end = mid - 1;
+            }
+            else if (nums[mid] < target)
+                start = mid + 1;
+            else if (nums[mid] > target)
+                end = mid - 1;
+        }
+        return -1;
+    }
+    int binary_search_right(vector<int> &nums, int target, int start, int end)
+    {
+        int mid;
+        int right_border = nums.size() - 1;
+        while (start <= end)
+        {
+            mid = (start + end) / 2;
+            if (nums[mid] == target)
+            {
+                if (mid == right_border || nums[mid + 1] != target)
+                    return mid;
+                else
+                    start = mid + 1;
+            }
+            else if (nums[mid] < target)
+                start = mid + 1;
+            else if (nums[mid] > target)
+                end = mid - 1;
+        }
+        return -1;
+    }
+};
 ```
