--- a/_posts/2020-10-10-剑指 Offer 04. 二维数组中的查找.md
+++ b/_posts/2020-10-10-剑指 Offer 04. 二维数组中的查找.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-10 20:05:26 +0800
-tags: 剑指Offer
+tags: 剑指Offer 查找算法
 ---
 
 # 剑指 Offer 04. 二维数组中的查找
@@ -61,5 +61,28 @@ class Solution {
 ```
 
 # Solution 2
-利用二分查找  
-todo  
+cpp  
+``` cpp
+#include <vector>
+using std::vector;
+
+class Solution
+{
+public:
+    bool findNumberIn2DArray(vector<vector<int>> &matrix, int target)
+    {
+        int x = matrix.size() - 1;
+        int y = 0;
+        while (x >= 0 && y < matrix[0].size())
+        {
+            if (matrix[x][y] == target)
+                return true;
+            else if (matrix[x][y] > target)
+                x--;
+            else if (matrix[x][y] < target)
+                y++;
+        }
+        return false;
+    }
+};
+```
