--- a/_posts/2020-11-01-剑指 Offer 50. 第一个只出现一次的字符.md
+++ b/_posts/2020-11-01-剑指 Offer 50. 第一个只出现一次的字符.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-01 15:52:33 +0800
-tags: 剑指Offer
+tags: 剑指Offer 查找算法
 ---
 
 # 剑指 Offer 50. 第一个只出现一次的字符
@@ -38,4 +38,31 @@ class Solution {
         return ' ';
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    char firstUniqChar(string s)
+    {
+        int exist[26];
+        for (size_t i = 0; i < 26; i++)
+            exist[i] = 0;
+        for (size_t i = 0; i < s.length(); i++)
+        {
+            int index = s[i] - 'a';
+            exist[index]++;
+        }
+        for (size_t i = 0; i < s.length(); i++)
+        {
+            int index = s[i] - 'a';
+            if (exist[index] == 1)
+                return s[i];
+        }
+        return ' ';
+    }
+};
 ```
