--- a/_posts/2020-10-14-剑指 Offer 11. 旋转数组的最小数字.md
+++ b/_posts/2020-10-14-剑指 Offer 11. 旋转数组的最小数字.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-14 14:50:20 +0800
-tags: 剑指Offer
+tags: 剑指Offer 查找算法
 ---
 
 # 剑指 Offer 11. 旋转数组的最小数字
@@ -49,4 +49,37 @@ class Solution {
         return numbers[start];
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <vector>
+using std::vector;
+
+class Solution
+{
+public:
+    int minArray(vector<int> &numbers)
+    {
+        if (numbers.size() == 0)
+            return -1;
+        int start = 0, end = numbers.size() - 1, mid;
+        while (start <= end)
+        {
+            mid = (start + end) / 2;
+            if (mid > 0 && numbers[mid] < numbers[mid - 1])
+                return numbers[mid];
+            else if (mid == 0 && numbers[mid] < numbers[numbers.size() - 1])
+                return numbers[mid];
+            else if (numbers[mid] < numbers[end])
+                end = mid - 1;
+            else if (numbers[mid] > numbers[end])
+                start = mid + 1;
+            else
+                end--;
+        }
+        return numbers[mid];
+    }
+};
 ```
