--- a/_posts/2020-10-24-剑指 Offer 32 - I. 从上到下打印二叉树.md
+++ b/_posts/2020-10-24-剑指 Offer 32 - I. 从上到下打印二叉树.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-24 17:26:53 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 32 - I. 从上到下打印二叉树
@@ -61,4 +61,50 @@ class Solution {
         return result;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <vector>
+using std::vector;
+
+struct TreeNode
+{
+    int val;
+    TreeNode *left;
+    TreeNode *right;
+    TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+};
+
+class Solution
+{
+public:
+    vector<int> result;
+    vector<int> levelOrder(TreeNode *root)
+    {
+        vector<TreeNode *> list_cur;
+        vector<TreeNode *> list_next;
+        result.clear();
+
+        list_cur.push_back(root);
+        while (list_cur.size() != 0 || list_next.size() != 0)
+        {
+            for (size_t i = 0; i < list_cur.size(); i++)
+            {
+                TreeNode *node = list_cur[i];
+                if (node == NULL)
+                    continue;
+                result.push_back(node->val);
+                list_next.push_back(node->left);
+                list_next.push_back(node->right);
+            }
+            list_cur.clear();
+            for (size_t i = 0; i < list_next.size(); i++)
+                list_cur.push_back(list_next[i]);
+            list_next.clear();
+        }
+        return result;
+    }
+};
 ```
