--- a/_posts/2020-10-25-剑指 Offer 32 - II. 从上到下打印二叉树 II.md
+++ b/_posts/2020-10-25-剑指 Offer 32 - II. 从上到下打印二叉树 II.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-25 21:06:27 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 32 - II. 从上到下打印二叉树 II
@@ -76,4 +76,42 @@ class Solution {
         return result;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    vector<vector<int>> result;
+    vector<vector<int>> levelOrder(TreeNode *root)
+    {
+        vector<TreeNode *> list_cur;
+        vector<TreeNode *> list_next;
+        result.clear();
+
+        list_cur.push_back(root);
+        while (list_cur.size() != 0 || list_next.size() != 0)
+        {
+            vector<int> layer;
+            for (size_t i = 0; i < list_cur.size(); i++)
+            {
+                TreeNode *node = list_cur[i];
+                if (node == NULL)
+                    continue;
+                layer.push_back(node->val);
+                list_next.push_back(node->left);
+                list_next.push_back(node->right);
+            }
+            if (layer.size() != 0)
+                result.emplace_back(layer);
+            list_cur.clear();
+            for (size_t i = 0; i < list_next.size(); i++)
+                list_cur.push_back(list_next[i]);
+            list_next.clear();
+        }
+        return result;
+    }
+};
 ```
