--- a/_posts/2020-10-26-剑指 Offer 32 - III. 从上到下打印二叉树 III.md
+++ b/_posts/2020-10-26-剑指 Offer 32 - III. 从上到下打印二叉树 III.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-26 09:27:04 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 32 - III. 从上到下打印二叉树 III
@@ -88,4 +88,60 @@ class Solution {
         return reversed;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    vector<vector<int>> result;
+    vector<vector<int>> levelOrder(TreeNode *root)
+    {
+        vector<TreeNode *> list_cur;
+        vector<TreeNode *> list_next;
+        bool odd = true;
+        result.clear();
+
+        list_cur.push_back(root);
+        while (list_cur.size() != 0 || list_next.size() != 0)
+        {
+            vector<int> layer;
+            for (size_t i = 0; i < list_cur.size(); i++)
+            {
+                TreeNode *node = list_cur[i];
+                if (node == NULL)
+                    continue;
+                list_next.push_back(node->left);
+                list_next.push_back(node->right);
+            }
+            if (odd)
+            {
+                for (int i = 0; i < list_cur.size(); i++)
+                {
+                    if (list_cur[i] != NULL)
+                        layer.push_back(list_cur[i]->val);
+                }
+                odd = false;
+            }
+            else
+            {
+                for (int i = list_cur.size() - 1; i >= 0; i--)
+                {
+                    if (list_cur[i] != NULL)
+                        layer.push_back(list_cur[i]->val);
+                }
+                odd = true;
+            }
+            if (layer.size() != 0)
+                result.emplace_back(layer);
+            list_cur.clear();
+            for (int i = 0; i < list_next.size(); i++)
+                list_cur.push_back(list_next[i]);
+            list_next.clear();
+        }
+        return result;
+    }
+};
 ```
