--- a/_posts/2020-10-21-剑指 Offer 26. 树的子结构.md
+++ b/_posts/2020-10-21-剑指 Offer 26. 树的子结构.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-21 19:36:32 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 26. 树的子结构
@@ -75,4 +75,45 @@ class Solution {
         return false;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution
+{
+public:
+    // note: isSubStructure(NULL or NOT_NULL, NULL) should return false
+    bool isSubStructure(TreeNode *A, TreeNode *B)
+    {
+        if (A == NULL || B == NULL)
+            return false;
+        if (isSame(A, B))
+            return true;
+        else
+            return isSubStructure(A->left, B) || isSubStructure(A->right, B);
+    }
+
+    bool isSame(TreeNode *A, TreeNode *B)
+    {
+        if (B == NULL)
+            return true;
+        if (A == NULL)
+            return false;
+        if (A->val == B->val)
+        {
+            return isSame(A->left, B->left) && isSame(A->right, B->right);
+        }
+        return false;
+    }
+};
 ```
