--- a/_posts/2020-10-22-剑指 Offer 27. 二叉树的镜像.md
+++ b/_posts/2020-10-22-剑指 Offer 27. 二叉树的镜像.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-22 09:33:48 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 27. 二叉树的镜像
@@ -61,4 +61,31 @@ class Solution {
         return root;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution
+{
+public:
+    TreeNode *mirrorTree(TreeNode *root)
+    {
+        if (root == NULL)
+            return NULL;
+        TreeNode *temp = root->left;
+        root->left = mirrorTree(root->right);
+        root->right = mirrorTree(temp);
+        return root;
+    }
+};
 ```
