--- a/_posts/2020-10-22-剑指 Offer 28. 对称的二叉树.md
+++ b/_posts/2020-10-22-剑指 Offer 28. 对称的二叉树.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-22 10:42:56 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 28. 对称的二叉树
@@ -73,4 +73,37 @@ class Solution {
                     && recursiveJudge(leftFirst.right, rightFirst.left));
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution
+{
+public:
+    bool isSymmetric(TreeNode *root)
+    {
+        return travelseIsSame(root, root);
+    }
+
+    bool travelseIsSame(TreeNode *left, TreeNode *right)
+    {
+        if (left == NULL && right == NULL)
+            return true;
+        if (left == NULL || right == NULL)
+            return false;
+        if (left->val == right->val)
+            return travelseIsSame(left->left, right->right) && travelseIsSame(left->right, right->left);
+        return false;
+    }
+};
 ```
