--- a/_posts/2020-10-13-剑指 Offer 10- I. 斐波那契数列.md
+++ b/_posts/2020-10-13-剑指 Offer 10- I. 斐波那契数列.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-13 15:06:42 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 10- I. 斐波那契数列
@@ -132,4 +132,27 @@ class Solution {
         return (int) result;
     }
 }
+```
+
+# Solution 4
+cpp  
+``` cpp
+class Solution
+{
+public:
+    int fib(int n)
+    {
+        int fn = 1, fn_1 = 0, temp = 0;
+        if (n <= 1)
+            return n;
+        while (n > 1)
+        {
+            temp = (fn + fn_1) % (1000000007);
+            fn_1 = fn;
+            fn = temp;
+            n--;
+        }
+        return fn;
+    }
+};
 ```
