--- a/_posts/2020-10-13-剑指 Offer 10- II. 青蛙跳台阶问题.md
+++ b/_posts/2020-10-13-剑指 Offer 10- II. 青蛙跳台阶问题.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-13 14:23:21 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 10- II. 青蛙跳台阶问题
@@ -51,4 +51,25 @@ class Solution {
         return a;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution {
+public:
+    int numWays(int n) {
+        int fn = 1, fn_1 = 0, temp = 0;
+        if (n <= 1)
+            return 1;
+        while (n > 0)
+        {
+            temp = (fn + fn_1) % (1000000007);
+            fn_1 = fn;
+            fn = temp;
+            n--;
+        }
+        return fn;
+    }
+};
 ```
