--- a/_posts/2020-11-05-剑指 Offer 63. 股票的最大利润.md
+++ b/_posts/2020-11-05-剑指 Offer 63. 股票的最大利润.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-05 20:27:54 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 63. 股票的最大利润
@@ -45,4 +45,27 @@ class Solution {
         return result;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    int maxProfit(vector<int> &prices)
+    {
+        if (prices.size() <= 1)
+            return 0;
+        int result = 0;
+        int knownMinPrice = prices[0];
+        for (size_t i = 0; i < prices.size(); i++)
+        {
+            int price = prices[i];
+            knownMinPrice = min(knownMinPrice, price);
+            result = max(result, price - knownMinPrice);
+        }
+        return result;
+    }
+};
 ```
