--- a/_posts/2020-10-30-剑指 Offer 42. 连续子数组的最大和.md
+++ b/_posts/2020-10-30-剑指 Offer 42. 连续子数组的最大和.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-30 15:50:44 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 42. 连续子数组的最大和
@@ -42,4 +42,28 @@ class Solution {
         return max;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    int maxSubArray(vector<int> &nums)
+    {
+        if (nums.size() == 0)
+            return 0;
+        int maxSum = nums[0], sum = 0;
+        for (size_t i = 0; i < nums.size(); i++)
+        {
+            if (sum < 0)
+                sum = 0;
+            sum += nums[i];
+            if (sum > maxSum)
+                maxSum = sum;
+        }
+        return maxSum;
+    }
+};
 ```
