--- a/_posts/2020-11-01-剑指 Offer 47. 礼物的最大价值.md
+++ b/_posts/2020-11-01-剑指 Offer 47. 礼物的最大价值.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-01 12:34:55 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 47. 礼物的最大价值
@@ -45,4 +45,30 @@ class Solution {
         return grid[grid.length - 1][grid[0].length - 1];
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    int maxValue(vector<vector<int>> &grid)
+    {
+        int m = grid.size();
+        int n = grid[0].size();
+        if (m == 0 || n == 0)
+            return 0;
+        int result[m][n];
+        result[0][0] = grid[0][0];
+        for (size_t i = 1; i < m; i++)
+            result[i][0] = grid[i][0] + result[i - 1][0];
+        for (size_t j = 1; j < n; j++)
+            result[0][j] = grid[0][j] + result[0][j - 1];
+        for (size_t i = 1; i < m; i++)
+            for (size_t j = 1; j < n; j++)
+                result[i][j] = grid[i][j] + max(result[i - 1][j], result[i][j - 1]);
+        return result[m - 1][n - 1];
+    }
+};
 ```
