--- a/_posts/2020-10-30-剑指 Offer 48. 最长不含重复字符的子字符串.md
+++ b/_posts/2020-10-30-剑指 Offer 48. 最长不含重复字符的子字符串.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-30 16:29:06 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 48. 最长不含重复字符的子字符串
@@ -63,4 +63,37 @@ class Solution {
         }
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <string>
+using std::string;
+
+class Solution
+{
+public:
+    int lengthOfLongestSubstring(string s)
+    {
+        bool map[128];
+        for (int i = 0; i < 128; i++)
+            map[i] = false;
+        int len = 0, maxLen = 0, start = 0, end = 0;
+        while (start < s.length() && end < s.length())
+        {
+            char c = s[end++];
+            while (map[c] == true)
+            {
+                map[s[start++]] = false;
+                len--;
+            }
+            map[c] = true;
+            len++;
+            if (len > maxLen)
+                maxLen = len;
+        }
+        return maxLen;
+    }
+};
 ```
