--- a/_posts/2020-11-01-剑指 Offer 46. 把数字翻译成字符串.md
+++ b/_posts/2020-11-01-剑指 Offer 46. 把数字翻译成字符串.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-01 15:18:53 +0800
-tags: 剑指Offer
+tags: 剑指Offer 动态规划
 ---
 
 # 剑指 Offer 46. 把数字翻译成字符串
@@ -49,4 +49,32 @@ class Solution {
         return currentCount;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    int translateNum(int num)
+    {
+        int result = 1, lastWayNum = 1;
+        int lastPosNum = -1, nowPosNum = -1;
+        while (num != 0)
+        {
+            int lastResult = result;
+            nowPosNum = num % 10;
+            num /= 10;
+            if ((nowPosNum == 1 && lastPosNum != -1) ||
+                (nowPosNum == 2 && 0 <= lastPosNum && lastPosNum <= 5))
+            {
+                result = result + lastWayNum;
+            }
+            lastPosNum = nowPosNum;
+            lastWayNum = lastResult;
+        }
+        return result;
+    }
+};
 ```
