--- a/_posts/2020-10-18-剑指 Offer 18. 删除链表的节点.md
+++ b/_posts/2020-10-18-剑指 Offer 18. 删除链表的节点.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-18 17:06:54 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针
 ---
 
 # 剑指 Offer 18. 删除链表的节点
@@ -66,4 +66,42 @@ class Solution {
         return head;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    ListNode *deleteNode(ListNode *head, int val)
+    {
+        ListNode *before = NULL, *current = head;
+        if (head == NULL)
+        {
+            return NULL;
+        }
+        while (current != NULL)
+        {
+            if (current->val == val)
+            {
+                if (before != NULL)
+                {
+                    before->next = current->next;
+                }
+                break;
+            }
+            before = current;
+            current = current->next;
+        }
+        if (before != NULL)
+        {
+            return head;
+        }
+        else
+        {
+            return head->next;
+        }
+    }
+};
 ```
