--- a/_posts/2020-10-20-剑指 Offer 22. 链表中倒数第k个节点.md
+++ b/_posts/2020-10-20-剑指 Offer 22. 链表中倒数第k个节点.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-20 09:00:02 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针
 ---
 
 # 剑指 Offer 22. 链表中倒数第k个节点
@@ -48,4 +48,32 @@ class Solution {
         return count;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    ListNode *getKthFromEnd(ListNode *head, int k)
+    {
+        int n = -1;
+        return recursivelyGetKthFromEnd(head, k, n);
+    }
+    ListNode *recursivelyGetKthFromEnd(ListNode *head, int k, int &n)
+    {
+        if (head == NULL)
+        {
+            n = 0;
+            return NULL;
+        }
+        ListNode *result = recursivelyGetKthFromEnd(head->next, k, n);
+        if (++n == k)
+        {
+            return head;
+        }
+        return result;
+    }
+};
 ```
