--- a/_posts/2020-10-20-剑指 Offer 25. 合并两个排序的链表.md
+++ b/_posts/2020-10-20-剑指 Offer 25. 合并两个排序的链表.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-20 11:16:13 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针
 ---
 
 # 剑指 Offer 25. 合并两个排序的链表
@@ -133,4 +133,92 @@ class Solution {
         return node;
     }
 }
+```
+
+# Solution 4
+cpp 递归  
+``` cpp
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution
+{
+public:
+    ListNode *mergeTwoLists(ListNode *l1, ListNode *l2)
+    {
+        ListNode *head = NULL;
+        if (l1 == NULL)
+            return l2;
+        if (l2 == NULL)
+            return l1;
+        if (l1->val <= l2->val)
+        {
+            head = l1;
+            l1->next = mergeTwoLists(l1->next, l2);
+        }
+        else
+        {
+            head = l2;
+            l2->next = mergeTwoLists(l1, l2->next);
+        }
+        return head;
+    }
+};
+```
+
+# Solution 5
+cpp 循环  
+``` cpp
+class Solution
+{
+public:
+    ListNode *mergeTwoLists(ListNode *l1, ListNode *l2)
+    {
+        ListNode *head = NULL, *tail = NULL, *temp = NULL;
+        while (l1 != NULL && l2 != NULL)
+        {
+            if (l1->val <= l2->val)
+            {
+                temp = l1;
+                l1 = l1->next;
+            }
+            else
+            {
+                temp = l2;
+                l2 = l2->next;
+            }
+            if (head == NULL)
+            {
+                head = tail = temp;
+            }
+            else
+            {
+                tail->next = temp;
+                tail = temp;
+            }
+        }
+        if (l1 == NULL)
+        {
+            temp = l2;
+        }
+        else //if (l2 == NULL)
+        {
+            temp = l1;
+        }
+        if (head == NULL)
+        {
+            head = temp;
+        }
+        else
+        {
+            tail->next = temp;
+        }
+        return head;
+    }
+};
 ```
