--- a/_posts/2020-10-30-剑指 Offer 52. 两个链表的第一个公共节点.md
+++ b/_posts/2020-10-30-剑指 Offer 52. 两个链表的第一个公共节点.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-30 17:26:16 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针
 ---
 
 # 剑指 Offer 52. 两个链表的第一个公共节点
@@ -92,4 +92,46 @@ public class Solution {
         return null;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution
+{
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB)
+    {
+        ListNode *a = headA, *b = headB;
+        bool a2b = true, b2a = true;
+        while (a != NULL && b != NULL)
+        {
+            if (a == b)
+            {
+                return a;
+            }
+            a = a->next;
+            b = b->next;
+            if (a == NULL && a2b)
+            {
+                a2b = false;
+                a = headB;
+            }
+            if (b == NULL && b2a)
+            {
+                b2a = false;
+                b = headA;
+            }
+        }
+        return NULL;
+    }
+};
 ```
