--- a/_posts/2020-10-19-剑指 Offer 21. 调整数组顺序使奇数位于偶数前面.md
+++ b/_posts/2020-10-19-剑指 Offer 21. 调整数组顺序使奇数位于偶数前面.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-19 11:38:42 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针（简单）
 ---
 
 # 剑指 Offer 21. 调整数组顺序使奇数位于偶数前面
@@ -73,4 +73,36 @@ class Solution {
         return nums;
     }
 }
+```
+
+# Solution 3
+cpp  
+``` cpp
+#include <vector>
+using std::vector;
+class Solution
+{
+public:
+    vector<int> exchange(vector<int> &nums)
+    {
+        int start = 0, end = nums.size() - 1;
+        while (start < end)
+        {
+            while (start < end && nums[start] % 2 == 1)
+            {
+                start++;
+            }
+            while (start < end && nums[end] % 2 == 0)
+            {
+                end--;
+            }
+            int temp = nums[start];
+            nums[start] = nums[end];
+            nums[end] = temp;
+            start++;
+            end--;
+        }
+        return nums;
+    }
+};
 ```
