--- a/_posts/2020-11-04-剑指 Offer 57. 和为s的两个数字.md
+++ b/_posts/2020-11-04-剑指 Offer 57. 和为s的两个数字.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-04 14:37:41 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针（简单）
 ---
 
 # 剑指 Offer 57. 和为s的两个数字
@@ -45,4 +45,36 @@ class Solution {
         return result;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    vector<int> twoSum(vector<int> &nums, int target)
+    {
+        int start = 0, end = nums.size() - 1;
+        vector<int> result;
+        while (start < end)
+        {
+            if (nums[start] + nums[end] == target)
+            {
+                result.push_back(nums[start]);
+                result.push_back(nums[end]);
+                break;
+            }
+            while (start < end && nums[start] + nums[end] < target)
+            {
+                start++;
+            }
+            while (start < end && nums[start] + nums[end] > target)
+            {
+                end--;
+            }
+        }
+        return result;
+    }
+};
 ```
