--- a/_posts/2020-11-04-剑指 Offer 58 - I. 翻转单词顺序.md
+++ b/_posts/2020-11-04-剑指 Offer 58 - I. 翻转单词顺序.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-11-04 17:05:27 +0800
-tags: 剑指Offer
+tags: 剑指Offer 双指针（简单）
 ---
 
 # 剑指 Offer 58 - I. 翻转单词顺序
@@ -64,4 +64,49 @@ class Solution {
         return buffer.toString();
     }
 }
+```
+
+# Solution 3
+cpp  
+``` cpp
+#include <stack>
+class Solution
+{
+public:
+    string reverseWords(string s)
+    {
+        string result;
+        stack<char> word;
+        for (int i = s.length() - 1; i >= 0; i--)
+        {
+            char c = s[i];
+            if (c == ' ')
+            {
+                if (!word.empty() && !result.empty() && result[result.size() - 1] != ' ')
+                {
+                    result.push_back(' ');
+                }
+                while (!word.empty())
+                {
+                    result.push_back(word.top());
+                    word.pop();
+                }
+            }
+            else
+            {
+                word.push(c);
+            }
+        }
+        if (!word.empty() && !result.empty() && result[result.size() - 1] != ' ')
+        {
+            result.push_back(' ');
+        }
+        while (!word.empty())
+        {
+            result.push_back(word.top());
+            word.pop();
+        }
+        return result;
+    }
+};
 ```
