--- a/_posts/2020-10-15-剑指 Offer 12. 矩阵中的路径.md
+++ b/_posts/2020-10-15-剑指 Offer 12. 矩阵中的路径.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-15 10:02:34 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 12. 矩阵中的路径
@@ -68,4 +68,55 @@ class Solution {
         return found;
     }
 }
+```
+# Solution 2
+cpp  
+``` cpp
+class Solution
+{
+public:
+    bool exist(vector<vector<char>> &board, string word)
+    {
+        if (word.length() == 0)
+        {
+            return true;
+        }
+        rows = board.size();
+        if (rows == 0)
+        {
+            return false;
+        }
+        columns = board[0].size();
+        for (int i = 0; i < rows; i++)
+        {
+            for (int j = 0; j < columns; j++)
+            {
+                if (find(board, i, j, word, 0))
+                {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    bool find(vector<vector<char>> &board, int i, int j, string word, int k)
+    {
+        if (i < 0 || i >= rows || j < 0 || j >= columns || board[i][j] != word[k])
+        {
+            return false;
+        }
+        if (k == word.length() - 1)
+        {
+            return true;
+        }
+        board[i][j] = '\0';
+        bool found = find(board, i + 1, j, word, k + 1) || find(board, i - 1, j, word, k + 1) || find(board, i, j + 1, word, k + 1) || find(board, i, j - 1, word, k + 1);
+        board[i][j] = word[k];
+        return found;
+    }
+
+protected:
+    int rows = 0, columns = 0;
+};
 ```
