--- a/_posts/2020-10-15-剑指 Offer 13. 机器人的运动范围.md
+++ b/_posts/2020-10-15-剑指 Offer 13. 机器人的运动范围.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-15 16:42:14 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 13. 机器人的运动范围
@@ -67,4 +67,65 @@ class Solution {
         return false;
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+#include <vector>
+using namespace std;
+
+class Solution
+{
+public:
+    int movingCount(int m, int n, int k)
+    {
+        if (m <= 0 || n <= 0 || k < 0)
+            return 0;
+        visitedMat.clear();
+        for (int i = 0; i < m; i++)
+        {
+            vector<bool> visitedLine;
+            for (int j = 0; j < n; j++)
+            {
+                visitedLine.emplace_back(false);
+            }
+            visitedMat.emplace_back(move(visitedLine));
+        }
+        return recursiveCount(visitedMat, 0, 0, k);
+    }
+
+protected:
+    vector<vector<bool>> visitedMat;
+    int recursiveCount(vector<vector<bool>> &visitedMat, int i, int j, int k)
+    {
+        if (i < 0 || i >= visitedMat.size() || j < 0 || j >= visitedMat[0].size() || visitedMat[i][j] == true)
+            return 0;
+        visitedMat[i][j] = true;
+        if (reachable(i, j, k))
+        {
+            int count = 1 + recursiveCount(visitedMat, i + 1, j, k) + recursiveCount(visitedMat, i, j + 1, k);
+            return count;
+        }
+        return 0;
+    }
+
+    bool reachable(int i, int j, int k)
+    {
+        int sum = 0;
+        while (i > 0)
+        {
+            sum += i % 10;
+            i = i / 10;
+        }
+        while (j > 0)
+        {
+            sum += j % 10;
+            j = j / 10;
+        }
+        if (sum <= k)
+            return true;
+        return false;
+    }
+};
 ```
