--- a/_posts/2020-10-27-剑指 Offer 34. 二叉树中和为某一值的路径.md
+++ b/_posts/2020-10-27-剑指 Offer 34. 二叉树中和为某一值的路径.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-10-27 08:50:18 +0800
-tags: 剑指Offer
+tags: 剑指Offer 搜索与回溯算法
 ---
 
 # 剑指 Offer 34. 二叉树中和为某一值的路径
@@ -74,4 +74,53 @@ class Solution {
         }
     }
 }
+```
+
+# Solution 2
+cpp  
+``` cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+#include <vector>
+#include <cstddef>
+using namespace std;
+class Solution
+{
+public:
+    vector<vector<int>> pathSum(TreeNode *root, int target)
+    {
+        vector<vector<int>> paths;
+        vector<int> path;
+        int sum = 0;
+        recursivelyGetPath(paths, path, root, sum, target);
+        return paths;
+    }
+
+    void recursivelyGetPath(vector<vector<int>> &paths, vector<int> &path, TreeNode *root, int &sum, int target)
+    {
+        if (root == NULL)
+        {
+            return;
+        }
+        path.push_back(root->val);
+        sum += root->val;
+        if (sum == target && root->left == NULL && root->right == NULL)
+        {
+            paths.emplace_back(path);
+        }
+        recursivelyGetPath(paths, path, root->left, sum, target);
+        recursivelyGetPath(paths, path, root->right, sum, target);
+        path.pop_back();
+        sum -= root->val;
+    }
+};
 ```
